se agrego la redireccion del login y el archivo login

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="/style.css" />
     
@@ -92,7 +92,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link link-light btn btn-outline-white me-2"
-                  href="not-found-page.hbs"
+                  href="/login"
                 >Login</a>
               </li>
               <div class="vr bg-light m-2"></div>
