--- a/views/login.hbs
+++ b/views/login.hbs
@@ -46,7 +46,7 @@
                   <div class=" mt-2">
                     <button type="submit" class="btn btn-primary">Ingresar</button>  
                   </div>
-                  <a type="submit" class="text-white pt-3">¿Primera vez? Registrarse </a>
+                  <a href="/register" type="submit" class="text-white pt-3">¿Primera vez? Registrarse </a>
             </div>
             <div class="col-4">
             </div>
