Creacion del login en proceso

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,11 +5,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+      <!-- Tipografia -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-      
-      
+      <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet"
+    
+      <!-- Bootstrap 5.2 -->
       <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -20,47 +21,45 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
       />
+
+      <!-- CSS -->
+      <link rel="stylesheet" href="/style.css">
+
       <title>Login</title>
   </head>
-  <body class="text-center">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-4">
-            </div>
-            <div class="col-4  mt-5 p-5 rounded" style="background-color: #0d8d0f">
-                <div class="mb-3 text-white ">
-                    <h1>INICIAR SESION</h1>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control text-white " id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email address</label>
-                  </div>
-                  <div class="form-floating">
-                    <input type="password" class="form-control text-white " id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                  </div>
-                  <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label text-white" for="exampleCheck1">Check me out</label>
-                  </div>
-                  <div class=" mt-2">
-                    <button type="submit" class="btn btn-primary">Ingresar</button>  
-                  </div>
-                  <a href="/register" type="submit" class="text-white pt-3">¿Primera vez? Registrarse </a>
-            </div>
-            <div class="col-4">
-            </div>
+
+  <body class="login-background-color">
+
+  <!-- Scripts JS para Bootstrap -->
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+
+    <div class="container-fluid text-center">
+      <div class="row vh-100 align-items-center justify-content-center">
+        <div class=" card-login rounded p-4 col-sm-8 col-md-6 col-lg-4">
+            <img src="/img/plant-happy.gif" alt="planta feliz" width="50%"  height="auto" class="img-fluid">
+            <form>
+              <div class="mb-3">
+                <h2>Bienvenido!</h2>
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">No te preocupes, nunca compartiremos tu mail con nadie ;)</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+              <div class="mb-3 form-check text-start">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+              </div>
+              <button type="submit" class="btn btn-success">Ingresar!</button>
+            </form>
         </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-3 justify-content-center">
-                <img src="../public/img/plant-happy.gif" alt="">
-            </div>
-            <div class="col-4"></div>
-            
-        </div>
-    </div>
+      </div>
     </div>
   </body>
 </html>
