--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet"
     
     <link rel="stylesheet" href="/style.css" />
     
@@ -21,6 +21,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
+        
+    <!-- CSS -->
+    <link rel="stylesheet" href="/style.css">
 
     <title>Agro forum</title>
   </head>
@@ -35,29 +38,6 @@
 
     <!-- Style pagina principal -->
     <style>
-      body{ background-color: #e6e6e6; font-family: 'Hind Siliguri', sans-serif;
-      } 
-
-      button{
-        font-size: 20px !important;
-      }
-      .carousel-item{
-      background-color: rgb(34, 48, 37); height: 38rem; } .overlay-image{
-      opacity: 40%; 
-      } 
-
-      .navbar-fluid, footer{ background-color: #499b4a; color:
-      white; font-weight:500; 
-      } 
-
-      .card{ box-shadow: 0px 5px 10px 7px #0000003b; background-color: #b1f3b220; 
-      }
-
-      button {
-        font-weight:500;
-      }
-
-      
     </style>
 
     <!-- Barra de navegacion -->
