implementacion de la base de datos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,9 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet"
-    
-    <link rel="stylesheet" href="/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -86,7 +84,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link link-light btn btn-outline-white me-2"
-                  href="not-found-page.hbs"
+                  href="/plantas"
                 >Plants</a>
               </li>
             </ul>
@@ -135,7 +133,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <di0v class="card p-3 m-3" style="width:22rem; height: 32rem;">
+          <div class="card p-3 m-3" style="width:22rem; height: 32rem;">
             <div class="card-body px-auto">
               <h3 class="card-title">Agro cultivos de paltas en mexico, fan de la vida</h3>
               <p class="card-text">26/08/2022</p>
@@ -151,7 +149,7 @@
               <p class="card-text">Me gustan mucho los paltas porque son verdes.</p>
             </div>
             
-          </di0v>
+          </div>
         </div>
       </div>
     </div>
