--- a/views/login.hbs
+++ b/views/login.hbs
@@ -39,24 +39,26 @@
 
     <div class="container-fluid text-center">
       <div class="row vh-100 align-items-center justify-content-center">
-        <div class=" card-login rounded p-4 col-sm-8 col-md-6 col-lg-4">
+        <div class=" card-login rounded p-3 col-sm-6 col-md-4 col-lg-4">
             <img src="/img/plant-happy.gif" alt="planta feliz" width="50%"  height="auto" class="img-fluid">
             <form>
-              <div class="mb-3">
+              <div class="mb-1">
                 <h2>Bienvenido!</h2>
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control rounded-pill" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">No te preocupes, nunca compartiremos tu mail con nadie ;)</div>
               </div>
-              <div class="mb-3">
+              <div class="mb-1 ">
                 <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" class="form-control  rounded-pill ps-1" id="exampleInputPassword1">
               </div>
-              <div class="mb-3 form-check text-start">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <div class="mb-1 form-check text-start">
+                <input type="checkbox" class="form-check-input " id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Recordarme</label>
               </div>
-              <button type="submit" class="btn btn-success">Ingresar!</button>
+              <button type="submit" class=" btn btn-success">
+                <a href="/" class="nav-link link-light">Ingresar!</a> 
+              </button>
             </form>
         </div>
       </div>
