--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-        
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/71/71199.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="/style.css">
 
