creacion de la pagina perfil

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,8 @@
-body{ background-color: #e6e6e6; font-family: 'Hind Siliguri', sans-serif;  background-attachment: fixed; 
-  
+*{
+  margin: 0px;
+  padding: 0px;
+}
+body{ background-color: #e6e6e6; font-family: 'Hind Siliguri', sans-serif;  background-attachment: fixed;  
 } 
 
 button{
@@ -45,5 +48,9 @@ button {
 }
 .input-group-text{
   color: white;
+  background-color: #198754;
+}
+
+.info-container{
   background-color: #198754;
 }
