--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,7 +70,7 @@
               <a
                 class="nav-link link-light btn btn-outline-white me-2"
                 href="/perfil"
-              >Pefil</a>
+              >Mi perfil</a>
               </li>
               {{else }}
               <li class="nav-item">
@@ -92,7 +92,7 @@
                 <a
                   class="nav-link link-light btn btn-outline-white me-2"
                   href="/plantas"
-                >Plants</a>
+                >Plantas</a>
               </li>
             </ul>
           </div>
