--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -4,15 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuario</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+
+    <title>Mi Perfil</title>
 </head>
 <body>
-    <h1>Bienvenido</h1>
+    <!-- Barra de navegacion -->
+    <nav class="navbar-fluid">
+      <div class="container-fluid pb-3">
+        <div class="row">
+          <div class="col-lg-4 text-left mt-3">
+            <div class="container-fluid">
+              <a class="navbar-brand " href="/">
+                <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid" style="width:50px;">
+                <a href="/" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+
+
+<div class="container-fluid" style="background-color: rgba(224, 58, 58, 0.732);">
+
+<div class="row">
+  <div class="col-12  align-self-center">
+  <img class="img-fluid" src="/img/user_icon.png" alt="user-image" style="width: 150px;">
+  </div>
+
+</div>
+</div>
+
+
+</div>
+
+    <!-- Logo y nombre de usuario -->
+    <div class="container ">
+    <div class="row justify-content-center mb-3">
+      <div class="col-6 text-center">
+        {{#Usuarios}}
+          <h1 class="fs-1 lead text-uppercase">{{nom_usuario}}</h1>
+        {{/Usuarios}}
+     </div>
+    </div>
+  </div>
+
+<!-- Informacion personal 
+<div class="row justify-content-center ">
     {{#Usuarios}}
-        <h2>{{nom_usuario}}</h2>
-        <h3>Datos personales</h3>
-        <input type="text" name="" id="">
+    <div class="col-6 info-container rounded">
+    <h3 class="lead mb-3 fs-2"> Informacion Personal: </h3>
+    <h5 class="lead mb-3">Nombre: <b>{{nombre}}</b></h5>
+    <h5 class="lead mb-3">Apellido: <b>{{apellido}}</b></h5>
+    <h5 class="lead mb-3">Correo Electronico: <b>{{correo}}</b></h5>
+    <h5 class="lead mb-3">Numero de telefono: <b>{{telefono}}</b></h5>
+    </div>
     {{/Usuarios}}
-    <a href="/logout">logout</a>
+
+</div>
+-->
+  
+  </div> 
+
+  
 </body>
 </html>
