se creo la seccion crear posteos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,12 +72,26 @@
                 href="/perfil"
               >Pefil</a>
               </li>
+              <div class="vr bg-light m-2"></div>
+              <li class="nav-item">
+                <a
+                  class="nav-link link-light btn btn-outline-white me-2"
+                  href="/crear"
+                >Crear Posteo</a>
+              </li>
               {{else }}
               <li class="nav-item">
               <a
                 class="nav-link link-light btn btn-outline-white me-2"
                 href="/login"
               >Login</a>
+              </li>
+              <div class="vr bg-light m-2"></div>
+              <li class="nav-item">
+                <a
+                  class="nav-link link-light btn btn-outline-white me-2"
+                  href="/plantas"
+                >Plants</a>
               </li>
               {{/if}}
               <div class="vr bg-light m-2"></div>
@@ -88,12 +102,6 @@
                 >Posteos</a>
               </li>
               <div class="vr bg-light m-2"></div>
-              <li class="nav-item">
-                <a
-                  class="nav-link link-light btn btn-outline-white me-2"
-                  href="/plantas"
-                >Plants</a>
-              </li>
             </ul>
           </div>
         </div>
