se creo la seccion crear posteos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
 
 
     <!-- Barra de navegacion -->
-    <nav class="navbar-fluid">
+    <nav class="navbar-fluid pb-2">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4 text-left mt-3">
@@ -101,7 +101,6 @@
                   href="/posteos"
                 >Posteos</a>
               </li>
-              <div class="vr bg-light m-2"></div>
             </ul>
           </div>
         </div>
